<resources>
    <string name="app_name">Week2</string>
    <string name="formulariocontacto">Formulario de contacto</string>
    <string name="NombreCompleto">Nombre completo</string>
    <string name="Descripcion">Descripción del contacto</string>
    <string name="EMail">Correo electrónico</string>
    <string name="Telefono">Teléfono</string>
    <string name="Fecha_Nac">Fecha de nacimiento</string>
    <string name="Siguiente">Siguiente</string>
    <string name="ConfirmarDatos">Confirmar Datos</string>
    <string name="EditarDatos">Editar Datos</string>
</resources>